# r55

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
contract-derive/: Cargo.toml
contract-derive/src/: helpers.rs  lib.rs
erc20/src/: lib.rs
erc20x/src/: lib.rs
eth-riscv-interpreter/: Cargo.toml
eth-riscv-interpreter/examples/: simple_execution.rs
eth-riscv-interpreter/scripts/: create_simple_test.sh  create_test_program.sh
eth-riscv-interpreter/src/: error.rs  lib.rs  main.rs
eth-riscv-interpreter/src/interpreter/: mod.rs  unicorn.rs
eth-riscv-interpreter/test_programs/: hello  hello.c  simple  simple.s  very_simple  very_simple.s
eth-riscv-runtime/src/: block.rs  call.rs  create.rs  err.rs  lib.rs  log.rs  types.rs
eth-riscv-runtime/src/storage/: mod.rs
eth-riscv-runtime/src/types/: lock.rs  mapping.rs  mod.rs  slot.rs  word.rs
eth-riscv-syscalls/src/: lib.rs
evm-caller/: Cargo.toml
evm-caller/src/: lib.rs
examples/erc20/.cargo/: config.toml
examples/erc20/src/: lib.rs
examples/erc20x/: Cargo.toml
examples/erc20x/src/: lib.rs
examples/erc721/src/: lib.rs
examples/evm-caller/src/: lib.rs
examples/uniswap-v2/: Cargo.toml
examples/uniswap-v2/src/: deployable.rs  factory.rs  lib.rs  math.rs  pair.rs
r55/: Cargo.toml  build.rs  erc20.pl  eth.pl
r55-compile/: Cargo.toml
r55-compile/src/: ast.rs  compile.rs  deployable.rs  generate.rs  helpers.rs  main.rs  types.rs
r55-output-bytecode/: Cargo.toml
r55-output-bytecode/src/: lib.rs
r55/src/: error.rs  exec.rs  gas.rs  lib.rs  main.rs  test_utils.rs
r55/tests/: e2e.rs  erc20.rs  erc721.rs  errors.rs  evm-contract-call.rs  interface.rs  simple.txt  uniswap-v2.rs
