[package]
name = "r55"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
#revm = { git = "https://github.com/r0qs/revm" }
eth-riscv-interpreter.workspace = true
eth-riscv-syscalls.workspace = true

revm = { version = "9.0.0", features = ["std"] }
rvemu = { git = "https://github.com/lvella/rvemu.git" }
alloy-core = "0.7.4"
alloy-sol-types = "0.7.4"
thiserror = "2.0.3"
eyre = "0.6.12"

[[bin]]
name = "r55"
